--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Tokyo Life</title>
   </head>
   <body>
     <div id="root"></div>
